@@ -16,59 +16,53 @@ package org.cloudfoundry.identity.uaa.integration;
 import com.fasterxml.jackson.core.type.TypeReference;
 import org.cloudfoundry.identity.uaa.ServerRunning;
 import org.cloudfoundry.identity.uaa.client.UaaClientDetails;
-import org.cloudfoundry.identity.uaa.oauth.client.ClientConstants;
 import org.cloudfoundry.identity.uaa.constants.OriginKeys;
 import org.cloudfoundry.identity.uaa.integration.util.IntegrationTestUtils;
+import org.cloudfoundry.identity.uaa.oauth.client.ClientConstants;
+import org.cloudfoundry.identity.uaa.oauth.common.util.RandomValueStringGenerator;
 import org.cloudfoundry.identity.uaa.oauth.jwt.Jwt;
-import org.cloudfoundry.identity.uaa.provider.LdapIdentityProviderDefinition;
+import org.cloudfoundry.identity.uaa.oauth.jwt.JwtHelper;
 import org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants;
+import org.cloudfoundry.identity.uaa.provider.IdentityProvider;
+import org.cloudfoundry.identity.uaa.provider.LdapIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.scim.ScimUser;
 import org.cloudfoundry.identity.uaa.test.UaaTestAccounts;
 import org.cloudfoundry.identity.uaa.util.JsonUtils;
-import org.cloudfoundry.identity.uaa.provider.IdentityProvider;
-import org.junit.After;
-import org.junit.Before;
 import org.junit.Rule;
-import org.junit.Test;
-import org.cloudfoundry.identity.uaa.oauth.jwt.JwtHelper;
-import org.cloudfoundry.identity.uaa.oauth.common.util.RandomValueStringGenerator;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.cloudfoundry.identity.uaa.integration.util.IntegrationTestUtils.doesSupportZoneDNS;
 import static org.cloudfoundry.identity.uaa.provider.ExternalIdentityProviderDefinition.USER_ATTRIBUTE_PREFIX;
-import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
 
-public class LdapIntegrationTests {
-
+class LdapIntegrationTests {
     @Rule
     public ServerRunning serverRunning = ServerRunning.isRunning();
 
-    @Before
-    public void setup() {
+    @BeforeEach
+    void setup() {
         String token = IntegrationTestUtils.getClientCredentialsToken(serverRunning.getBaseUrl(), "admin", "adminsecret");
 
         IntegrationTestUtils.ensureGroupExists(token, "", serverRunning.getBaseUrl(), "zones.testzone1.admin");
     }
 
-    @After
-    public void cleanup() {
+    @AfterEach
+    void cleanup() {
         String token = IntegrationTestUtils.getClientCredentialsToken(serverRunning.getBaseUrl(), "admin", "adminsecret");
         String groupId = IntegrationTestUtils.getGroup(token, "", serverRunning.getBaseUrl(), "zones.testzone1.admin").getId();
         IntegrationTestUtils.deleteGroup(token, "", serverRunning.getBaseUrl(), groupId);
     }
 
     @Test
-    public void test_LDAP_Custom_User_Attributes_In_ID_Token() {
-        assertTrue("Expected testzone1.localhost and testzone2.localhost to resolve to 127.0.0.1", doesSupportZoneDNS());
+    void test_LDAP_Custom_User_Attributes_In_ID_Token() {
+        assertThat(doesSupportZoneDNS()).as("Expected testzone1.localhost and testzone2.localhost to resolve to 127.0.0.1").isTrue();
 
         final String COST_CENTER = "costCenter";
         final String COST_CENTERS = "costCenters";
@@ -85,65 +79,63 @@ public class LdapIntegrationTests {
 
         //identity client token
         RestTemplate identityClient = IntegrationTestUtils.getClientCredentialsTemplate(
-            IntegrationTestUtils.getClientCredentialsResource(baseUrl, new String[]{"zones.write", "zones.read", "scim.zones"}, "identity", "identitysecret")
+                IntegrationTestUtils.getClientCredentialsResource(baseUrl, new String[]{"zones.write", "zones.read", "scim.zones"}, "identity", "identitysecret")
         );
         //admin client token - to create users
         RestTemplate adminClient = IntegrationTestUtils.getClientCredentialsTemplate(
-            IntegrationTestUtils.getClientCredentialsResource(baseUrl, new String[0], "admin", "adminsecret")
+                IntegrationTestUtils.getClientCredentialsResource(baseUrl, new String[0], "admin", "adminsecret")
         );
         //create the zone
-
         IntegrationTestUtils.createZoneOrUpdateSubdomain(identityClient, baseUrl, zoneId, zoneId, null);
 
         //create a zone admin user
-        String email = new RandomValueStringGenerator().generate() +"@samltesting.org";
-        ScimUser user = IntegrationTestUtils.createUser(adminClient, baseUrl,email ,"firstname", "lastname", email, true);
+        String email = new RandomValueStringGenerator().generate() + "@samltesting.org";
+        ScimUser user = IntegrationTestUtils.createUser(adminClient, baseUrl, email, "firstname", "lastname", email, true);
         String groupId = IntegrationTestUtils.findGroupId(
-          adminClient, serverRunning.getBaseUrl(), String.format("zones.%s.admin", zoneId)
+                adminClient, serverRunning.getBaseUrl(), "zones.%s.admin".formatted(zoneId)
         );
         IntegrationTestUtils.addMemberToGroup(adminClient, serverRunning.getBaseUrl(), user.getId(), groupId);
 
         //get the zone admin token
         String zoneAdminToken =
-            IntegrationTestUtils.getAccessTokenByAuthCode(serverRunning,
-                                                           UaaTestAccounts.standard(serverRunning),
-                                                           "identity",
-                                                           "identitysecret",
-                                                           email,
-                                                           "secr3T");
+                IntegrationTestUtils.getAccessTokenByAuthCode(serverRunning,
+                        UaaTestAccounts.standard(serverRunning),
+                        "identity",
+                        "identitysecret",
+                        email,
+                        "secr3T");
 
         LdapIdentityProviderDefinition ldapIdentityProviderDefinition = LdapIdentityProviderDefinition.searchAndBindMapGroupToScopes(
-            "ldap://localhost:389/",
-            "cn=admin,dc=test,dc=com",
-            "password",
-            "dc=test,dc=com",
-            "cn={0}",
-            "ou=scopes,dc=test,dc=com",
-            "member={0}",
-            "mail",
-            null,
-            false,
-            true,
-            true,
-            100,
-            true);
-        ldapIdentityProviderDefinition.addAttributeMapping(USER_ATTRIBUTE_PREFIX+COST_CENTERS, COST_CENTER);
-        ldapIdentityProviderDefinition.addAttributeMapping(USER_ATTRIBUTE_PREFIX+MANAGERS, MANAGER);
+                "ldap://localhost:389/",
+                "cn=admin,dc=test,dc=com",
+                "password",
+                "dc=test,dc=com",
+                "cn={0}",
+                "ou=scopes,dc=test,dc=com",
+                "member={0}",
+                "mail",
+                null,
+                false,
+                true,
+                true,
+                100,
+                true);
+        ldapIdentityProviderDefinition.addAttributeMapping(USER_ATTRIBUTE_PREFIX + COST_CENTERS, COST_CENTER);
+        ldapIdentityProviderDefinition.addAttributeMapping(USER_ATTRIBUTE_PREFIX + MANAGERS, MANAGER);
         ldapIdentityProviderDefinition.addWhiteListedGroup("marissaniner");
         ldapIdentityProviderDefinition.addWhiteListedGroup("marissaniner2");
 
-
-        IdentityProvider provider = new IdentityProvider();
+        IdentityProvider<LdapIdentityProviderDefinition> provider = new IdentityProvider<>();
         provider.setIdentityZoneId(zoneId);
         provider.setType(OriginKeys.LDAP);
         provider.setActive(true);
         provider.setConfig(ldapIdentityProviderDefinition);
         provider.setOriginKey(OriginKeys.LDAP);
         provider.setName("simplesamlphp for uaa");
-        provider = IntegrationTestUtils.createOrUpdateProvider(zoneAdminToken,baseUrl,provider);
-        assertNotNull(provider.getId());
+        provider = IntegrationTestUtils.createOrUpdateProvider(zoneAdminToken, baseUrl, provider);
+        assertThat(provider.getId()).isNotNull();
 
-        assertEquals(OriginKeys.LDAP, provider.getOriginKey());
+        assertThat(provider.getOriginKey()).isEqualTo(OriginKeys.LDAP);
 
         List<String> idps = Collections.singletonList(provider.getOriginKey());
 
@@ -156,65 +148,57 @@ public class LdapIntegrationTests {
         clientDetails = IntegrationTestUtils.createClientAsZoneAdmin(zoneAdminToken, baseUrl, zoneId, clientDetails);
         clientDetails.setClientSecret("secret");
 
-
-        String idToken =
-            (String) IntegrationTestUtils.getPasswordToken(zoneUrl,
-                                                           clientDetails.getClientId(),
-                                                           clientDetails.getClientSecret(),
-                                                           "marissa9",
-                                                           "ldap9",
-                                                           "openid user_attributes roles")
+        String idToken = (String) IntegrationTestUtils.getPasswordToken(zoneUrl,
+                        clientDetails.getClientId(),
+                        clientDetails.getClientSecret(),
+                        "marissa9",
+                        "ldap9",
+                        "openid user_attributes roles")
                 .get("id_token");
 
-        assertNotNull(idToken);
+        assertThat(idToken).isNotNull();
 
         Jwt idTokenClaims = JwtHelper.decode(idToken);
-        Map<String, Object> claims = JsonUtils.readValue(idTokenClaims.getClaims(), new TypeReference<Map<String, Object>>() {});
+        Map<String, Object> claims = JsonUtils.readValue(idTokenClaims.getClaims(), new TypeReference<>() {
+        });
 
-        assertNotNull(claims.get(ClaimConstants.USER_ATTRIBUTES));
-        Map<String,List<String>> userAttributes = (Map<String, List<String>>) claims.get(ClaimConstants.USER_ATTRIBUTES);
-        assertThat(userAttributes.get(COST_CENTERS), containsInAnyOrder(DENVER_CO));
-        assertThat(userAttributes.get(MANAGERS), containsInAnyOrder(JOHN_THE_SLOTH, KARI_THE_ANT_EATER));
+        assertThat(claims).containsKey(ClaimConstants.USER_ATTRIBUTES);
+        Map<String, List<String>> userAttributes = (Map<String, List<String>>) claims.get(ClaimConstants.USER_ATTRIBUTES);
+        assertThat(userAttributes.get(COST_CENTERS)).contains(DENVER_CO);
+        assertThat(userAttributes.get(MANAGERS)).contains(JOHN_THE_SLOTH, KARI_THE_ANT_EATER);
 
-
-        assertNotNull(claims.get(ClaimConstants.ROLES));
+        assertThat(claims).containsKey(ClaimConstants.ROLES);
         List<String> roles = (List<String>) claims.get(ClaimConstants.ROLES);
-        assertThat(roles, containsInAnyOrder("marissaniner", "marissaniner2"));
+        assertThat(roles).contains("marissaniner", "marissaniner2");
 
         //no user_attribute scope provided
         idToken =
-            (String) IntegrationTestUtils.getPasswordToken(zoneUrl,
-                                                           clientDetails.getClientId(),
-                                                           clientDetails.getClientSecret(),
-                                                           "marissa9",
-                                                           "ldap9",
-                                                           "openid")
-                .get("id_token");
+                (String) IntegrationTestUtils.getPasswordToken(zoneUrl,
+                                clientDetails.getClientId(),
+                                clientDetails.getClientSecret(),
+                                "marissa9",
+                                "ldap9",
+                                "openid")
+                        .get("id_token");
 
-        assertNotNull(idToken);
+        assertThat(idToken).isNotNull();
 
         idTokenClaims = JwtHelper.decode(idToken);
-        claims = JsonUtils.readValue(idTokenClaims.getClaims(), new TypeReference<Map<String, Object>>() {});
-        assertNull(claims.get(ClaimConstants.USER_ATTRIBUTES));
-        assertNull(claims.get(ClaimConstants.ROLES));
+        claims = JsonUtils.readValue(idTokenClaims.getClaims(), new TypeReference<>() {
+        });
+        assertThat(claims).doesNotContainKey(ClaimConstants.USER_ATTRIBUTES)
+                .doesNotContainKey(ClaimConstants.ROLES);
 
-
-        String username = "\u7433\u8D3A";
+        String username = "琳贺";
         idToken =
-            (String) IntegrationTestUtils.getPasswordToken(zoneUrl,
-                                                           clientDetails.getClientId(),
-                                                           clientDetails.getClientSecret(),
-                                                           username,
-                                                           "koala",
-                                                           "openid")
-                .get("id_token");
+                (String) IntegrationTestUtils.getPasswordToken(zoneUrl,
+                                clientDetails.getClientId(),
+                                clientDetails.getClientSecret(),
+                                username,
+                                "koala",
+                                "openid")
+                        .get("id_token");
 
-        assertNotNull(idToken);
+        assertThat(idToken).isNotNull();
     }
-
-    protected boolean isLdapEnabled() {
-        String profile = System.getProperty("spring.profiles.active","");
-        return profile.contains(OriginKeys.LDAP);
-    }
-
 }
